# apps/server/src/main/java/com/bazi/app/config/WebConfig.java
@@ -28,6 +28,6 @@ public class WebConfig implements WebMvcConfigurer {
   @Override
   public void addInterceptors(InterceptorRegistry registry) {
     registry.addInterceptor(authInterceptor)
-        .addPathPatterns("/api/v1/records/**", "/api/v1/me", "/api/v1/redeem");
+        .addPathPatterns("/api/v1/records/**", "/api/v1/me", "/api/v1/redeem", "/api/v1/orders", "/api/v1/pay/mock-success/**");
   }
 }
